# diesel-enum

./: .gitignore  Cargo.toml  README.md  compose.yaml  justfile
core/: Cargo.toml
core/src/: lib.rs
core/src/test_runners/: mod.rs  sqlite.rs
prelude/: Cargo.toml
prelude/src/: lib.rs
prelude/src/test_runners/: postgres.rs  sqlite.rs
prelude/tests/: pg_example.rs  pg_tests.rs  sqlite_query.rs  sqlite_tests.rs
prelude/tests/pg_data/: mod.rs  models.rs  schema.rs
prelude/tests/sqlite_data/: mod.rs
proc-macro/: Cargo.toml
proc-macro/src/: attributes.rs  conversions.rs  features.rs  lib.rs  test_generation.rs
src/: attributes.rs  conversions.rs  features.rs  lib.rs  macros.rs  process_variants.rs  test_generation.rs
test-runners/: Cargo.toml
test-runners/src/: lib.rs  postgres.rs  sqlite.rs
tests/: Cargo.toml  diesel_pg.toml  diesel_sqlite.toml  poke-db.sqlite3  poke-db.sqlite3-shm
tests/migrations/pg/2025-10-23-082231-0000_init/: up.sql
tests/src/: from_table.rs  lib.rs  models.rs  pg_tests.rs  queries.rs  sqlite_tests.rs
tests/src/examples/: mod.rs  postgres_example.rs  sqlite_example.rs
tests/src/pg_tests/: mod.rs  models.rs  schema.rs
tests/src/sqlite_tests/: mod.rs  models.rs  schema.rs
