[package]
name = "diesel-enums-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
owo-colors = { version = "4", optional = true, features = ["supports-colors"] }
thiserror = "2"
tokio = { version = "1", features = [
  "time",
  "macros",
  "sync",
], optional = true }
deadpool-diesel = { version = "0.6", optional = true }
deadpool-sync = { version = "0.1.4", optional = true }
dotenvy = { version = "0.15", optional = true }
diesel = { version = "2.3", optional = true }

[features]
pretty-test-errors = ["dep:owo-colors"]
default-sqlite-runner = [
  "dep:tokio",
  "dep:deadpool-diesel",
  "deadpool-diesel/sqlite",
  "dep:deadpool-sync",
  "dep:dotenvy",
  "dep:diesel",
  "diesel/sqlite",
]
