[package]
name = "diesel-enums"
version = "0.1.0"
edition.workspace = true

[dependencies]
diesel-enum-checked = { path = "../proc-macro/" }
owo-colors = { version = "4", optional = true, features = ["supports-colors"] }
thiserror = "2"

[features]
pretty-test-errors = ["dep:owo-colors"]

default = ["pretty-test-errors"]
