[package]
name = "diesel-enum-checked"
publish = false
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
readme = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
convert_case = "0.8"

[lib]
proc-macro = true

[features]
default-skip-consistency-check = []
default-skip-test = []
default-name-mapping = []
default-conn-function-path = []
no-default-id-mapping = []
async-tests = []
pretty-test-errors = []
