[package]
name = "diesel-enums-proc-macro"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

description = "proc-macro library behind the diesel-enums crate."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
convert_case = "0.8"

[lib]
proc-macro = true
