[package]
name = "test-runners"
version = "0.1.0"
edition.workspace = true

[dependencies]
diesel-enums = { path = "../prelude/" }
tokio = { version = "1", features = ["time", "macros", "sync"] }
deadpool-diesel = { version = "0.6" }
deadpool-sync = { version = "0.1", optional = true }
dotenvy = { version = "0.15" }
diesel = { version = "2.3" }

[features]
sqlite = ["deadpool-diesel/sqlite", "dep:deadpool-sync", "diesel/sqlite"]
postgres = ["deadpool-diesel/postgres", "diesel/postgres"]
